upgrade bootstrap, fix devtool

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
-    "bootstrap": "5.0.0-beta3",
+    "bootstrap": "^5.0.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
@@ -39,8 +39,8 @@
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
+    "sass": "1.32.13",
+    "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.33.2",
