--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "https://github.com/engelsystem/engelsystem/contributors",
   "license": "GPL-2.0-or-later",
   "scripts": {
-    "build": "NODE_ENV=production run-s build:clean build:webpack",
+    "build": "NODE_ENV=production npm run build:clean && npm run build:webpack",
     "build:clean": "rimraf public/assets",
     "build:webpack": "webpack",
     "build:watch": "webpack --watch"
@@ -34,7 +34,6 @@
     "file-loader": "^6.1.0",
     "mini-css-extract-plugin": "^1.4.1",
     "mkdirp": "^1.0.4",
-    "npm-run-all": "^4.1.3",
     "postcss": "^8.2.8",
     "postcss-loader": "^5.2.0",
     "rimraf": "^3.0.2",
