--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "https://github.com/engelsystem/engelsystem/contributors",
   "license": "GPL-2.0-or-later",
   "scripts": {
-    "build": "(export NODE_ENV=production && npm run build:clean && npm run build:webpack)",
+    "build": "(export NODE_ENV=production && yarn build:clean && yarn build:webpack)",
     "build:clean": "rimraf public/assets",
     "build:webpack": "webpack",
     "build:watch": "webpack --watch"
@@ -33,11 +33,10 @@
     "css-minimizer-webpack-plugin": "^2.0.0",
     "file-loader": "^6.1.0",
     "mini-css-extract-plugin": "^1.4.1",
-    "mkdirp": "^1.0.4",
     "postcss": "^8.2.8",
     "postcss-loader": "^5.2.0",
     "rimraf": "^3.0.2",
-    "sass": "1.32.13",
+    "sass": "^1.35.1",
     "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
