--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jquery-ui": "^1.11.2",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "select2": "^4.0.13"
+    "select2": "^4.0.13",
+    "select2-bootstrap-5-theme": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
